--- a/src/templates/demographic.html
+++ b/src/templates/demographic.html
@@ -12,7 +12,7 @@
       <h3>Please answer the following questions:</h3>
       <form id="form_demog"
             name="form_demog"
-            action="{{ url_for('prac_instruction') }}"
+           action="{{ url_for('practice.prac_instruction') }}"
             method="POST"
             onsubmit="return saveDemog();">
 
