--- a/src/templates/let_comp_one.html
+++ b/src/templates/let_comp_one.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div>
-    <form id="form_lcOne" name="form_lcOne" action="{{ url_for('let_comp_two_inst') }}" method="POST" onsubmit="return saveLetCompOne();">
+    <form id="form_lcOne" name="form_lcOne" action="{{ url_for('core.let_comp_two_inst') }}" method="POST" onsubmit="return saveLetCompOne();">
       <table>
         <colgroup>
           <col style="width:30%;"/>
