--- a/src/templates/let_comp_one_inst.html
+++ b/src/templates/let_comp_one_inst.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="cl0" style="font-size:20pt">
-    <form method="get" action="{{ url_for('let_comp_one') }}">
+    <form method="get" action="{{ url_for('core.let_comp_one') }}">
       <input type="image" name="submit" id="submit"
              src="{{ url_for('static', filename='images/nextpage_button.gif') }}"
              alt="Next">
