--- a/src/templates/let_comp_two.html
+++ b/src/templates/let_comp_two.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div>
-    <form id="form_lcTwo" name="form_lcTwo" action="{{ url_for('let_comp_two') }}" method="POST" onsubmit="return saveLetCompTwo();">
+    <form id="form_lcTwo" name="form_lcTwo" action="{{ url_for('core.let_comp_two') }}" method="POST" onsubmit="return saveLetCompTwo();">
       <table>
         <colgroup>
           <col style="width:30%;"/>
