--- a/src/templates/task_a.html
+++ b/src/templates/task_a.html
@@ -50,7 +50,7 @@
           <!-- Not visited yet => display as a clickable text box -->
           <td class="cl5">
             <div style="width: 100%; border: 1px solid #007BFF; padding: 10px; background-color: #e9f5ff; font-size: 16pt; color: #0B3861; border-radius: 4px; cursor: pointer;"
-                onclick="window.location.href='{{ url_for('task_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
+                onclick="window.location.href='{{ url_for('core.task_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
               {{ subtop_title }}
             </div>
           </td>
