--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <iframe id="warning-frame" src="{{ url_for('warning') }}"></iframe>
-  <iframe id="consent-frame" src="{{ url_for('consent') }}"></iframe>
+  <iframe id="warning-frame" src="{{ url_for('core.warning') }}"></iframe>
+  <iframe id="consent-frame" src="{{ url_for('core.consent') }}"></iframe>
 </body>
 </html>
