--- a/src/templates/let_comp_two_inst.html
+++ b/src/templates/let_comp_two_inst.html
@@ -22,7 +22,7 @@
 
   <div class="cl0" style="font-size:20pt">
     <!-- The form posts to the next route. Replace 'let_comp_two' with your next Flask route name -->
-    <form method="post" action="{{ url_for('let_comp_two') }}">
+    <form method="post" action="{{ url_for('core.let_comp_two') }}">
       <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/nextpage_button.gif') }}" alt="Next">
     </form>
   </div>
