--- a/src/templates/practice/prac_a.html
+++ b/src/templates/practice/prac_a.html
@@ -1,4 +1,4 @@
-<!-- templates/prac_a.html -->
+<!-- templates/practice/prac_a.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -72,7 +72,7 @@
           <!-- Not visited yet => display as a clickable text box -->
           <td class="cl5">
             <div style="width: 100%; border: 1px solid #007BFF; padding: 10px; background-color: #e9f5ff; font-size: 16pt; color: #0B3861; border-radius: 4px; cursor: pointer;"
-                onclick="window.location.href='{{ url_for('prac_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
+                onclick="window.location.href='{{ url_for('practice.prac_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
               {{ subtop_title }}
             </div>
           </td>
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
