--- a/src/templates/practice/prac_b.html
+++ b/src/templates/practice/prac_b.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ passResult['passTitle'] if passResult else "Task B" }}</title>
+  <title>{{ pageTitle if pageTitle else "Practice B" }}</title>
+  <script src="{{ url_for('static', filename='js/countdown.js') }}"></script>
 </head>
 <body>
-  <!-- b_up -->
   <div class="b_up">
-    <!-- Timer -->
     <div id="timer" class="timer">
       <p><strong>TIME REMAINS:</strong></p>
       <script>
@@ -21,11 +20,9 @@
         var FinishMessage = "Time is UP!";
         var RedirectPage = "{{ session.get('redirectPage', '') }}";
       </script>
-      <script src="{{ url_for('static', filename='js/countdown.js') }}"></script>
     </div>
   </div>
 
-  <!-- b_down -->
   <div class="b_down">
     <div id="article" class="article">
       <div id="artText" class="artText">
@@ -37,29 +34,17 @@
       </div>
     </div>
 
-    <div id="back_a" class="back_a">
-      <!-- "Go to OTHER TOPIC" => /task_c1?fid=back -->
+    <div class="back_a">
       <p>
-        <a href="{{ url_for('task_c1', fid='back') }}" style="color:#160101;">
-          Go to OTHER TOPIC
-        </a>
+        <a href="{{ url_for('core.task_c1', fid='back') }}" style="color:#0a0000;">Go to OTHER TOPIC</a>
       </p>
     </div>
 
-    <div class="nextArt" style="
-      border: 1px solid #ccc;
-      padding: 10px;
-      display: flex;
-      justify-content: {% if passOrder == 11 %} flex-start {% else %} flex-end {% endif %};
-    ">
-      {% if passOrder == 11 %}
-        <a href="{{ url_for('task_c1', fid='back') }}" style="color:#0a0000;">
-          Go to OTHER TOPIC
-        </a>
+    <div class="nextArt" style="border: 1px solid #ccc; padding: 10px; display: flex; justify-content: {% if passOrder == 5 %} flex-start {% else %} flex-end {% endif %};">
+      {% if passOrder == 5 %}
+        <a href="{{ url_for('core.task_c1', fid='back') }}" style="color:#0a0000;">Go to OTHER TOPIC</a>
       {% else %}
-        <a href="{{ url_for('task_c1', fid='same') }}" style="color:#0a0000;">
-          Read NEXT ARTICLE
-        </a>
+        <a href="{{ url_for('core.task_c1', fid='same') }}" style="color:#0a0000;">Read NEXT ARTICLE</a>
       {% endif %}
     </div>
   </div>
