--- a/src/templates/let_comp_one.html
+++ b/src/templates/let_comp_one.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Submit Letter Comparison One</title>
+  <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <style>
     table { width: 100%; }
