--- a/src/templates/let_comp_one_inst.html
+++ b/src/templates/let_comp_one_inst.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Instruction for Letter Comparison One</title>
+  <base target="_top">
   <style>
     .cl2 { margin: 20px; padding: 20px; border: 1px solid #ccc; }
     .cl0 { margin: 20px; }
