--- a/src/templates/practice/prac_instruction.html
+++ b/src/templates/practice/prac_instruction.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Prac Instruction</title>
+  <base target="_top">
   <style>
     input[type="range"] { width: 100vw; }
   </style>
