--- a/src/templates/practice/prac_k2.html
+++ b/src/templates/practice/prac_k2.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Practice K2</title>
+  <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
   <br><br>
   <div id="k2" style="text-align:center;">
+    <h2 style="color:#0B3861;">Practice Complete</h2>
+    <p>You’ve finished the practice round. Now, write briefly what you learned, then continue to the formal task.</p>
     <div class="passQ">
       <p>
         Now, please tell us about what you have learned today about
@@ -35,4 +38,3 @@
   </script>
 </body>
 </html>
-
