--- a/src/templates/task_setting.html
+++ b/src/templates/task_setting.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Setting</title>
+    <base target="_top">
 </head>
 <body>
     <p>The current topic ID is {{ topID }}<br></p>
