--- a/src/templates/timer.html
+++ b/src/templates/timer.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Countdown Timer</title>
+  <base target="_top">
   <!-- If you have a global CSS, link it here
        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   -->
