--- a/src/templates/k2.html
+++ b/src/templates/k2.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>K2</title>
+  <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
