--- a/src/templates/practice/prac_a.html
+++ b/src/templates/practice/prac_a.html
@@ -72,7 +72,7 @@
           <!-- Not visited yet => display as a clickable text box -->
           <td class="cl5">
             <div style="width: 100%; border: 1px solid #007BFF; padding: 10px; background-color: #e9f5ff; font-size: 16pt; color: #0B3861; border-radius: 4px; cursor: pointer;"
-                onclick="window.location.href='{{ url_for('practice.prac_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
+                onclick="window.top.location.href='{{ url_for('practice.prac_b', subtop=subtop_id, passOrd='01', lastPage='a') }}';">
               {{ subtop_title }}
             </div>
           </td>
@@ -88,4 +88,3 @@
 
 </body>
 </html>
-
