--- a/src/templates/practice/prac_c3.html
+++ b/src/templates/practice/prac_c3.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Practice C3</title>
+  <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
@@ -48,4 +49,3 @@
   </script>
 </body>
 </html>
-
