--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Comprehension Questions</title>
+  <base target="_top">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
