--- a/src/templates/task_c1.html
+++ b/src/templates/task_c1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{ page_title }}</title>
+    <base target="_top">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
