--- a/src/templates/practice/prac_b.html
+++ b/src/templates/practice/prac_b.html
@@ -35,20 +35,11 @@
       </div>
     </div>
 
-    <div class="back_a">
-      <p>
-        <a href="{{ url_for('practice.prac_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to OTHER TOPIC</a>
-      </p>
-    </div>
-
-    <div class="nextArt" style="border: 1px solid #ccc; padding: 10px; display: flex; justify-content: {% if passOrder == 5 %} flex-start {% else %} flex-end {% endif %};">
-      <div style="display:flex; gap: 24px;">
-        <a href="{{ url_for('practice.prac_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to OTHER TOPIC</a>
-        {% if passOrder != 5 %}
-          <a href="{{ url_for('practice.prac_c1', fid='same') }}" target="_top" style="color:#0a0000;">Read NEXT ARTICLE</a>
-        {% endif %}
-        <a href="{{ url_for('practice.prac_c1', fid='done') }}" target="_top" style="color:#0a0000;">Finish Practice</a>
-      </div>
+    <div class="nextArt" style="border: 1px solid #ccc; padding: 10px; display: flex; align-items: center; justify-content: space-between; gap: 24px;">
+      <a href="{{ url_for('practice.prac_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to other topic</a>
+      {% if passOrder != 5 %}
+      <a href="{{ url_for('practice.prac_c1', fid='same') }}" target="_top" style="color:#0a0000;">Continue to next article</a>
+      {% endif %}
     </div>
   </div>
 </body>
