--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -8,23 +8,48 @@
 </head>
 <body>
   <div class="cl0">
-		<h2><b>Informed Consent</b></h2>
+		<h2><b>Learning From Multiple Texts</b></h2>
+    <p>You are being asked to participate in a voluntary research study. The purpose of this study is to understand how people learn information through reading and searching from multiple texts. Participating in this study will involve filling out surveys, learning health topics, answering what you have learned, and completing cognitive ability measures. During the study, you will need to learn several health topics under a limit of time. Some health topics are more difficult than others. You can decide how you want to allocate your time. The goal is to learn as much as you can. After learning, you will need to report what you have learned and answer comprehension questions. You will receive additional bonus money if the accuracy of your comprehension questions is higher than 90%. Your participation will last about 45 minutes.</p>
 
-		<p>
-			You are invited to participate in a research study on learning a health topic from a series of passages. This study is conducted by Dr. Elizabeth A. L. Stine-Morrow and Jessie Chin of the Department of Educational Psychology at the University of Illinois Urbana-Champaign. This study will take approximately 20-30 minutes of your time. You will be given a test about the topic you just learned at the end of the study.
-		</p>
-		<p>
-			Your decision to participate or decline participation in this study is completely voluntary and you have the right to terminate your participation at any time without penalty. You may skip any questions you do not wish to answer. If do not wish to complete this survey, just close your browser.
-		</p>
-		<p>
-			Your participation in this research will be completely anonymous and data will be averaged and reported in aggregate. Possible outlets of dissemination include academic conferences and journals. Although your participation in this research may not benefit you personally, it will help us understand how people develop expectancies as they read. There are no risks to individuals participating in this survey beyond those that exist in daily life.
-		</p>
-		<p>
-			You will receive $1.25 for your participation. And if your score on the test is higher than 90 out of 100, you will receive $0.5 for a bonus reward.
-		</p>
-		<p>
-			If you have questions about this project, you may contact Dr. Stine-Morrow at eals@illinois.edu or Jessie Chin at chin5@illinois.edu. If you have any questions about your rights as a research participant in the study, please contact the University of Illinois Institutional Review Board at 217-333-2670 (collect calls accepted if you identify yourself as a research participant) or via email at irb@illinois.edu. Please print a copy of this consent form for your records, if you so desire.
-		</p>
+    <h2>Principal Investigator</h2>
+    <p><strong>Name and Title:</strong> Jessie Chin, Associate Professor<br>
+       <strong>Department and Institution:</strong> School of Information Sciences, University of Illinois Urbana-Champaign<br>
+       <strong>Contact Information:</strong> <a href="mailto:chin5@illinois.edu">chin5@illinois.edu</a></p>
+
+    <h2>What procedures are involved?</h2>
+    <p>The study procedures are:</p>
+    <ol>
+        <li>Completing a survey about your demographic information</li>
+        <li>Learning information online</li>
+        <li>Reporting what you have learned</li>
+        <li>Taking some cognitive ability tasks</li>
+    </ol>
+    <p>The study will last about 45 minutes.</p>
+
+    <h2>Will my study-related information be kept confidential?</h2>
+    <p>Faculty, students, and staff who may see your information will maintain confidentiality to the extent of laws and university policies. No personal identifiers will be collected. Participation is fully anonymous.</p>
+
+    <h2>Will I be reimbursed for any expenses or paid for my participation in this research?</h2>
+    <p>You will be paid $10 after the completion of the study. In addition, participants will receive $5 bonus if the accuracy of comprehension questions is higher than 90%.</p>
+
+    <h2>Can I withdraw or be removed from the study?</h2>
+    <p>If you decide to participate, you are free to withdraw your consent and discontinue participation at any time. Your participation in this research is voluntary. Your decision whether or not to participate, or to withdraw after beginning participation, will not affect your current or future dealings with the University of Illinois Urbana-Champaign.</p>
+
+    <h2>Will data collected from me be used for any other research?</h2>
+    <p>Your data will not be used or distributed for other research.</p>
+
+    <h2>What are the risks and benefits of the study?</h2>
+    <p>No risk is expected in this study; benefits related to this research include advancing our understandings in learning science.</p>
+
+    <h2>Who should I contact if I have questions?</h2>
+    <p>Contact the researcher Jessie Chin, Associate Professor in Information Sciences, <a href="mailto:chin5@illinois.edu">chin5@illinois.edu</a> if you have any questions about this study or your part in it, or if you have concerns or complaints about the research.</p>
+
+    <h2>What are my rights as a research subject?</h2>
+    <p>If you have any questions about your rights as a research subject, including concerns, complaints, or to offer input, you may call the Office for the Protection of Research Subjects (OPRS) at 217-333-2670 or e-mail OPRS at <a href="mailto:irb@illinois.edu">irb@illinois.edu</a>. If you would like to complete a brief survey to provide OPRS feedback about your experiences as a research participant, please follow the <a href="https://redcap.healthinstitute.illinois.edu/surveys/?s=47X9T4NE4X" target="_blank">link here</a>. You will have the option to provide feedback or concerns anonymously or you may provide your name and contact information for follow-up purposes.</p>
+
+    <p>Please print this consent form if you would like to retain a copy for your records.</p>
+
+    <p>I have read and understand the above consent form. I certify that I am a native speaker of English and aged 18 years old or older. By clicking the “Submit” button to enter the survey, I indicate my willingness to voluntarily take part in this study.</p>
 	</div>
 
   <div class="cl0" style="font-size:20pt">
@@ -34,10 +59,10 @@
     <br><br>
 
     <!-- The form now posts to /demographic instead of demographic.php -->
-    <form id="form_consent"
-          action="{{ url_for('core.demographic') }}"
-          method="POST"
-          onsubmit="return saveConsent();">
+      <form id="form_consent"
+            action="{{ url_for('core.demographic') }}"
+            method="POST"
+            onsubmit="return saveConsent();">
 
       {% if error %}
       <p style="color:#b30000; margin:0 0 1em 0; font-weight:bold;">{{ error }}</p>
