1.字母比较任务页面修改为一个session一页,反应时间单位为秒.

--- a/src/templates/instruction.html
+++ b/src/templates/instruction.html
@@ -105,6 +105,8 @@
                         <b><br>2. "Including the other articles that you have read today, how much new information was in this article?"</b>
                     </td>
                 </tr>
+
+
                 <tr>
                     <td style='text-align:center;'>
                         <form id='form_c2' name='form_c2'> 		
@@ -124,6 +126,8 @@
                         </form>
                       </td>
                 </tr>
+
+
                 <tr>
                     <td style='font-size:14pt; color:#0B3861; text-align:left;'>
                         <b><br>3. "How much did you learn from this particular article?"</b>
@@ -148,6 +152,33 @@
                         </form>
                       </td>
                 </tr>
+
+
+                <tr>
+                  <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+                      <b><br>4. "How much have you gained on the big topic of health?"</b>
+                  </td>
+              </tr>
+              <tr>
+                  <td style='text-align:center;'>
+                      <form id='form_c3' name='form_c3'> 		
+                         <table style="width: 100%;">
+                           <tr>
+                             <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
+                          </tr>
+                           <tr>
+                             <td style='font-size:16pt; color:#0B3861; text-align:left;'><b>0</b></td>
+                             <td style='font-size:16pt; color:#0B3861; text-align:right;'><b>100</b></td>
+                           </tr>
+                           <tr>
+                             <td style='font-size:13pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+                             <td style='font-size:13pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+                           </tr> 				
+                         </table> 		
+                      </form>
+                    </td>
+              </tr>
+
             </table>
         </div>
         <!-- </center> -->
