update content and layout in done.html. Update content in prac_c4.

--- a/src/templates/practice/prac_c4.html
+++ b/src/templates/practice/prac_c4.html
@@ -18,7 +18,7 @@
       <div id="c4" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>4. How much did you learn overall from the practice article?</b></p>
+          <p><b>4. How much did you learn overall from the practice articles?</b></p>
           <br><br>
 
           <form id="form_c4" name="form_c4" action="{{ url_for('practice.prac_c4', fid=fid) }}" method="POST" onsubmit="return saveAns();">
@@ -34,7 +34,7 @@
                 </td>
               </tr>
               <tr>
-                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn’t Learn<br>Anything at All</td>
+                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn't Learn<br>Anything at All</td>
                 <td style="text-align:right; vertical-align:top;"><b>100</b><br>Learned a Lot</td>
               </tr>
             </table>
